change to using import_playbook

--- a/proj5/proj5_playbook.yml
+++ b/proj5/proj5_playbook.yml
@@ -1,2 +1,2 @@
 ---
-- include: "../{{next_playbook_name}}/{{ next_playbook_name }}_playbook.yml"
+- import_playbook: "../{{next_playbook_name}}/{{ next_playbook_name }}_playbook.yml"
