test add_hosts in a workflow

--- a/proj1/proj1_playbook.yml
+++ b/proj1/proj1_playbook.yml
@@ -7,6 +7,14 @@
     - name: run task B
       debug: msg="run task B"
 
+    - name: add new host
+      add_hosts:
+        hostname: blah blah
+        ansible_host: localhost
+        ansible_connection: local
+        groups:
+          proj2
+
     - name: run playbook based on extra variable
       set_stats:
         data:
