--- a/proj3/proj3_playbook.yml
+++ b/proj3/proj3_playbook.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: proj3
+- hosts: all
   tasks:
-    - debug: var=hostvar
+    - debug: var=hostvars
 
     - name: run task A in project 3
       debug:
