--- a/vm_setup/playbook.yml
+++ b/vm_setup/playbook.yml
@@ -1,15 +1,14 @@
 ---
 - hosts: localhost
   connection: local
+  gather_facts: no
   tasks:
-    - name: create docker container
+    - name: create Docker container simulates VM creation
       docker_container:
-        state: "started"
-        name: "ts{{ port_number }}"
+        state: "started "
+        name: "ts{{ vm_details.ansible_port }}"
         image: linuxsimba/python-and-ssh
         ports:
-          - "9{{ port_number }}:22"
+          - "{{ vm_details.ansible_port }}"
         env:
           AUTHORIZED_KEYS="{{ ssh_pub_key }}"
-
-    - debug: var=ansible_ssh_key_private_file
