run job on docker container

--- a/vm-setup/playbook.yml
+++ b/vm-setup/playbook.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: localhost
-  connection: local
+- hosts: docker_host
   gather_facts: no
   tasks:
     - name: create Docker container simulates VM creation
