--- a/vm-setup/playbook.yml
+++ b/vm-setup/playbook.yml
@@ -2,9 +2,11 @@
 - hosts: docker_host
   gather_facts: no
   tasks:
+    - debug: msg="{{ ansible private key file: DEBUG ... {{ansible_ssh_private_key_file}} "
+
     - name: create Docker container simulates VM creation
       docker_container:
-        state: "started "
+        state: started
         name: "ts{{ vm_details.ansible_port }}"
         image: linuxsimba/python-and-ssh
         ports:
