--- a/vm-setup/check_vm_status.yml
+++ b/vm-setup/check_vm_status.yml
@@ -4,3 +4,11 @@
   connection: local
   tasks:
     - debug: var=vm_details
+
+    - name:  add newly created host to temporary inventory
+      add_host: "{{ vm_details }}"
+
+- hosts: new_vms
+  gather_facts: no
+  tasks:
+    wait_for_connection:
