--- a/app_folder/app_setup.yml
+++ b/app_folder/app_setup.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: new_vms
   roles:
-    - { role: app1, when: run_app == 'all' or run_app == 'app1' }
-    - { role: app2, when: run_app == 'all' or run_app == 'app2' }
-    - { role: app3, when: run_app == 'all' or run_app == 'app3' }
+    - { role: app1, when: run_app == 'all' or 'app1' in app_list }
+    - { role: app2, when: run_app == 'all' or 'app2' in app_list }
+    - { role: app3, when: run_app == 'all' or 'app3' in app_list }
